@@ -79,7 +79,7 @@ public class TranslateTest extends LSPTest
 
 		dump(response.get(0));
 		assertEquals("saveUri is not empty", response.get(0).getPath("error.message"));
-		assertEquals(new Long(-32602), response.get(0).getPath("error.code"));
+		assertEquals(Long.valueOf(-32602), response.get(0).getPath("error.code"));
 
 		request = RPCRequest.create(123L, "slsp/TR/translate",
 				new JSONObject(
@@ -92,7 +92,7 @@ public class TranslateTest extends LSPTest
 
 		dump(response.get(0));
 		assertEquals("saveUri is not a folder", response.get(0).getPath("error.message"));
-		assertEquals(new Long(-32602), response.get(0).getPath("error.code"));
+		assertEquals(Long.valueOf(-32602), response.get(0).getPath("error.code"));
 
 		request = RPCRequest.create(123L, "slsp/TR/translate",
 				new JSONObject(
@@ -105,7 +105,7 @@ public class TranslateTest extends LSPTest
 
 		dump(response.get(0));
 		assertEquals("saveUri does not exist", response.get(0).getPath("error.message"));
-		assertEquals(new Long(-32602), response.get(0).getPath("error.code"));
+		assertEquals(Long.valueOf(-32602), response.get(0).getPath("error.code"));
 		
 		Path empty = Files.createTempDirectory("test");
 
@@ -121,7 +121,7 @@ public class TranslateTest extends LSPTest
 
 		dump(response.get(0));
 		assertEquals("Unsupported language", response.get(0).getPath("error.message"));
-		assertEquals(new Long(-32602), response.get(0).getPath("error.code"));
+		assertEquals(Long.valueOf(-32602), response.get(0).getPath("error.code"));
 	}
 
 	@Test
@@ -327,7 +327,7 @@ public class TranslateTest extends LSPTest
 		assertEquals(1, response.size());
 		dump(response.get(0));
 		assertEquals("slsp/unknown", response.get(0).getPath("error.message"));
-		assertEquals(new Long(-32601), response.get(0).getPath("error.code"));
+		assertEquals(Long.valueOf(-32601), response.get(0).getPath("error.code"));
 
 		request = RPCRequest.create(123L, "slsp/another", new JSONObject());
 
@@ -335,6 +335,6 @@ public class TranslateTest extends LSPTest
 		assertEquals(1, response.size());
 		dump(response.get(0));
 		assertEquals("Plugin does not support analysis", response.get(0).getPath("error.message"));
-		assertEquals(new Long(-32603), response.get(0).getPath("error.code"));
+		assertEquals(Long.valueOf(-32603), response.get(0).getPath("error.code"));
 	}
 }
